SERVER-19947 fix distributed deadlock by preventing agg cursors from making a network call from inside the collection lock